@@ -1,3 +1,4 @@
+* Improve moves synchronisation on shipments
 * Allow move as move's origin
 * Open product quantities by warehouse to show moves
 
